ansible/initial_setup/roles/nat/templates/iptables.nat.rules
# Generated by iptables-save v1.4.21 on Sat Oct  8 09:26:04 2016
*nat
:PREROUTING ACCEPT [1172:76632]
:INPUT ACCEPT [1170:76496]
:OUTPUT ACCEPT [69:4602]
:POSTROUTING ACCEPT [112:7351]

# Forward SSH connections
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2202 -j DNAT --to-destination 192.168.154.2:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2203 -j DNAT --to-destination 192.168.154.3:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2204 -j DNAT --to-destination 192.168.154.4:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2205 -j DNAT --to-destination 192.168.154.5:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2206 -j DNAT --to-destination 192.168.154.6:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2207 -j DNAT --to-destination 192.168.154.7:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2208 -j DNAT --to-destination 192.168.154.8:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2209 -j DNAT --to-destination 192.168.154.9:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2210 -j DNAT --to-destination 192.168.154.10:22

# Forward HTTP/S requests to load balancers
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.154.16:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.154.16:443

# Forward HTTP/S requests to preprod server
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 192.168.154.10:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 4430 -j DNAT --to-destination 192.168.154.10:443

# Forward HTTP/S requests to Zabbix web interface
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8081 -j DNAT --to-destination 192.168.154.9:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 4431 -j DNAT --to-destination 192.168.154.9:443

# Forward HTTP/S requests to Gogs web interface
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8082 -j DNAT --to-destination 192.168.154.8:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 4432 -j DNAT --to-destination 192.168.154.8:443

# Forward HTTP/S requests to Buildbot(CI) web interface
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8083 -j DNAT --to-destination 192.168.154.8:8083
-A PREROUTING -i eth0 -p tcp -m tcp --dport 4433 -j DNAT --to-destination 192.168.154.8:4433

# Forward MTA, SMTPS, IMAPS, POP3S requests to the mail host
-A PREROUTING -i eth0 -p tcp -m tcp --dport 587 -j DNAT --to-destination 192.168.154.2:587
-A PREROUTING -i eth0 -p tcp -m tcp --dport 465 -j DNAT --to-destination 192.168.154.2:465
-A PREROUTING -i eth0 -p tcp -m tcp --dport 993 -j DNAT --to-destination 192.168.154.2:993
-A PREROUTING -i eth0 -p tcp -m tcp --dport 995 -j DNAT --to-destination 192.168.154.2:995

#Forward XMPP (client/server)
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5222 -j DNAT --to-destination 192.168.154.3:5222

-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Sat Oct  8 09:26:04 2016
